--- a/terminator.config
+++ b/terminator.config
@@ -23,3 +23,11 @@
     palette = "#000000:#ff5555:#50fa7b:#f1fa8c:#bd93f9:#ff79c6:#8be9fd:#bbbbbb:#555555:#ff5555:#50fa7b:#f1fa8c:#bd93f9:#ff79c6:#8be9fd:#ffffff"
     show_titlebar = False
     use_system_font = False
+  [[fxcolas-hdpi]]
+    background_color = "#282a36"
+    cursor_color = "#bbbbbb"
+    font = Monaco 21
+    foreground_color = "#f8f8f2"
+    palette = "#000000:#ff5555:#50fa7b:#f1fa8c:#bd93f9:#ff79c6:#8be9fd:#bbbbbb:#555555:#ff5555:#50fa7b:#f1fa8c:#bd93f9:#ff79c6:#8be9fd:#ffffff"
+    show_titlebar = False
+    use_system_font = False
